Make the footer buttons move onto a second row if the window is too small to prevent overflow

--- a/addons/debugger/style.css
+++ b/addons/debugger/style.css
@@ -114,6 +114,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
